@@ -44,6 +44,7 @@ export(
        oce.write.table,
        parse.latlon,
        plot.adcp,
+       plot.adv,
        plot.TS,
        plot.coastline,
        plot.ctd,
@@ -63,6 +64,8 @@ export(
        read.adcp,
        read.adcp.rdi,
        read.adcp.nortek,
+       read.adv,
+       read.adv.sontek,
        read.coastline,
        read.ctd,
        read.topo,
@@ -105,6 +108,7 @@ export(
        )
 
 S3method(plot, adcp)
+S3method(plot, adv)
 S3method(plot, coastline)
 S3method(plot, ctd)
 S3method(plot, lobo)
@@ -115,6 +119,7 @@ S3method(plot, tidem)
 S3method(plot, topo)
 S3method(plot, windrose)
 S3method(print, summary.adcp)
+S3method(print, summary.adv)
 S3method(print, summary.coastline)
 S3method(print, summary.ctd)
 S3method(print, summary.lobo)
@@ -124,8 +129,8 @@ S3method(print, summary.pt)
 S3method(print, summary.tidem)
 S3method(print, summary.topo)
 S3method(predict, tidem)
-
 S3method(summary, adcp)
+S3method(summary, adv)
 S3method(summary, coastline)
 S3method(summary, ctd)
 S3method(summary, lobo)
