@@ -1,4 +1,5 @@
 0.1-77
+- add preliminary ADV support
 - add oce.plot.ts()
 - add support for ADCP data from RDI and NorTek
 - add imagep()
